[gd_scene load_steps=8 format=3 uid="uid://r4d1xnyarsyl"]

[ext_resource type="Script" path="res://scripts/user_interface/uiAttributeAdjust.gd" id="1_unumd"]
[ext_resource type="PackedScene" uid="uid://b0f85fb7fa5hj" path="res://scenes/user_interface/CustomButton.tscn" id="2_il4r5"]
[ext_resource type="AudioStream" uid="uid://bpjr8c8h4tx7y" path="res://audio/sounds/421275__jaszunio15__click_126.ogg" id="3_hucun"]
[ext_resource type="Theme" uid="uid://yo85ef7wg3gc" path="res://design/OutlinedLabel.tres" id="3_is7rp"]
[ext_resource type="AudioStream" uid="uid://b5pn4wlttjtuw" path="res://audio/sounds/421364__jaszunio15__click_154.ogg" id="4_5kj7n"]
[ext_resource type="AudioStream" uid="uid://n5da8bdbjiaf" path="res://audio/sounds/421300__jaszunio15__click_241.ogg" id="6_a57yd"]
[ext_resource type="Theme" uid="uid://b2trsep3ukxi0" path="res://design/RightSideButtonHighlights.tres" id="6_yt3dc"]

[node name="AttributeAdjust" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_unumd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -44.5
offset_right = 120.0
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Brawn" type="HSplitContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 2
split_offset = 100
dragger_visibility = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Brawn"]
layout_mode = 2

[node name="Up" parent="HBoxContainer/VBoxContainer/Brawn/HBoxContainer" instance=ExtResource("2_il4r5")]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
text = "BRAWN"
focused_entered_sound = ExtResource("3_hucun")
click_sound = ExtResource("4_5kj7n")

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Brawn/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme = ExtResource("3_is7rp")
theme_override_font_sizes/font_size = 16
text = "+0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reset" parent="HBoxContainer/VBoxContainer/Brawn" instance=ExtResource("2_il4r5")]
layout_mode = 2
theme = ExtResource("6_yt3dc")
text = "RESET"
focused_entered_sound = ExtResource("3_hucun")
click_sound = ExtResource("6_a57yd")

[node name="Grit" type="HSplitContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
split_offset = 100
dragger_visibility = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Grit"]
layout_mode = 2

[node name="Up" parent="HBoxContainer/VBoxContainer/Grit/HBoxContainer" instance=ExtResource("2_il4r5")]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../../Brawn/HBoxContainer/Up")
text = "GRIT"
focused_entered_sound = ExtResource("3_hucun")
click_sound = ExtResource("4_5kj7n")

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Grit/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme = ExtResource("3_is7rp")
theme_override_font_sizes/font_size = 16
text = "+10%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reset" parent="HBoxContainer/VBoxContainer/Grit" instance=ExtResource("2_il4r5")]
layout_mode = 2
theme = ExtResource("6_yt3dc")
text = "RESET"
focused_entered_sound = ExtResource("3_hucun")
click_sound = ExtResource("6_a57yd")

[node name="Handling" type="HSplitContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
split_offset = 100
dragger_visibility = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Handling"]
layout_mode = 2

[node name="Up" parent="HBoxContainer/VBoxContainer/Handling/HBoxContainer" instance=ExtResource("2_il4r5")]
layout_mode = 2
text = "HANDLING"
focused_entered_sound = ExtResource("3_hucun")
click_sound = ExtResource("4_5kj7n")

[node name="Value" type="Label" parent="HBoxContainer/VBoxContainer/Handling/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme = ExtResource("3_is7rp")
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reset" parent="HBoxContainer/VBoxContainer/Handling" instance=ExtResource("2_il4r5")]
layout_mode = 2
theme = ExtResource("6_yt3dc")
text = "RESET"
focused_entered_sound = ExtResource("3_hucun")
click_sound = ExtResource("6_a57yd")

[node name="Available" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = 35.0
offset_right = -74.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_is7rp")
text = "Points"
vertical_alignment = 1

[node name="Points" type="Label" parent="Available"]
layout_mode = 0
offset_left = 34.0
offset_top = 1.0
offset_right = 54.0
offset_bottom = 24.0
text = "10"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Brawn/HBoxContainer/Up" to="." method="_on_up_brawn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Brawn/Reset" to="." method="_on_reset_brawn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Grit/HBoxContainer/Up" to="." method="_on_up_grit_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Grit/Reset" to="." method="_on_reset_grit_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Handling/HBoxContainer/Up" to="." method="_on_up_hand_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Handling/Reset" to="." method="_on_reset_handling_pressed"]
